--- a/css/main.css
+++ b/css/main.css
@@ -39,19 +39,86 @@ main::after {
 
 .loading {
   display: none;
-  width: 100%;
   height: 100%;
-  margin: 10px;
-  border: 4px solid;
-  border-radius: 10px;
-  font-size: 40px;
-  background-size: cover;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  transition: all .2s ease;
 }
 
 .loading.show {
   display: block;
+}
+
+.loader {
+  position: relative;
+  width: 12px;
+  height: 12px;
+
+  top: 46%;
+  top: -webkit-calc(50% - 6px);
+  top: calc(50% - 30px);
+  left: 46%;
+  left: -webkit-calc(50% - 6px);
+  left: calc(50% - 6px);
+
+  border-radius: 12px;
+  background-color: #0f1012;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  -webkit-animation: loader6 1s ease-in-out infinite;
+  animation: loader6 1s ease-in-out infinite;
+}
+
+.loader:before {
+  content: "";
+  position: absolute;
+  background-color: #0f1012;
+  top: 0px;
+  left: -25px;
+  height: 12px;
+  width: 12px;
+  border-radius: 12px;
+}
+
+.loader:after {
+  content: "";
+  position: absolute;
+  background-color: #0f1012;
+  top: 0px;
+  left: 25px;
+  height: 12px;
+  width: 12px;
+  border-radius: 12px;
+}
+
+
+@-webkit-keyframes loader6 {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(180deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(180deg);
+  }
+}
+
+@keyframes loader6 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(180deg);
+  }
 }
 
 /* 스크롤바 설정*/
@@ -208,7 +275,7 @@ main::after {
 }
 
 .movies span {
-  margin: 70px auto 0;
+  margin: 130px auto 0;
   text-align: center;
 }
 
